<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundYellow" 
    android:tag="@string/directSearche">

    <TextView
        android:id="@+id/textView3"
        style="@style/DesingForTextSmall"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/ortTextField"
        android:layout_marginTop="10dp"
        android:text="@string/country"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ortTextField"
        android:layout_alignRight="@+id/ortTextField"
        android:layout_below="@+id/textView3"
        android:entries="@array/country_arrays"
        android:prompt="@string/country" />

    <Button
        android:id="@+id/subbmitBtn"
        style="@style/DesingForButtons"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignRight="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="17dp"
        android:text="Suchen" />

    <TextView
        android:id="@+id/textView4"
        style="@style/DesignForText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/directSearche"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/suchbegriff"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView1"
        style="@style/DesingForTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/suchbegriff"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/searchterm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/ortTextField"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/suchbegriff"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPostalAddress" 
         style="@style/DesingForTextViewInput"/>

  

    <TextView
        android:id="@+id/textView2"
        style="@style/DesingForTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/suchbegriff"
        android:layout_marginTop="10dp"
        android:text="@string/zip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>